<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etValorPrestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/valor_prestado"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>

    <EditText
        android:id="@+id/etValorDefecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/valor_defecto1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/crear_tarjeta"></androidx.appcompat.widget.AppCompatButton>


</androidx.appcompat.widget.LinearLayoutCompat>